contact navigation added

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <p class="link"><a id="profile-link" href="https://github.com/yoboisandy" target="_blank">Show All ></a></p>
         </div>
-        <div class="contact-section">
+        <div id="contact" class="contact-section">
             <div class="contact-header">
                 <h1>Let's work together...</h1>
                 <p>How do you take your coffee?</p>
