Removed fcc stuffs

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal-Portfolio : FCC</title>
+    <title>Sandeep Sharma | A Web Developer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -20,8 +20,8 @@
         </nav>
         <div id="welcome-section">
             <div id="about">
-                <h1>Hey I am Sandy</h1>
-                <p>a web developer</p>
+                <h1>Hey I am Sandeep Sharma</h1>
+                <p>A Web Developer</p>
             </div>
         </div>
         <div id="projects">
@@ -54,18 +54,18 @@
                 <p>How do you take your coffee?</p>
             </div>
             <div class="contact-links">
-                <a href="#">Facebook</a>
-                <a href="#">Github</a>
-                <a href="#">Call Me</a>
+                <a href="https://www.facebook.com/sharma.sandeep.963434/" target="_blank">Facebook</a>
+                <a href="https://www.instagram.com/_sandeep_aka_msdian/" target="_blank">Instagram</a>
+                <a href="https://github.com/yoboisandy" target="_blank">Github</a>
+                <a href="https://www.linkedin.com/in/sandeep-sharma-4aa392179/" target="_blank">Linked In</a>
             </div>
         </div>
         <div class="border"></div>
         <div class="footer">
-            <p>**This is just a fake portfolio. All the projects and contact details given are not real.</p>
-            <p>© Created for freeCodeCamp </p>
+            <p>Made with ❤ and HTML, CSS & JS</p>
+            <p>Thanks For Visiting</p>
         </div>
     </div>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
 </html>
