updated smooth scrolling

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <div id="welcome-section">
-            <div id="about">
+        <div class="welcome-section" id="about">
+            <div>
                 <h1>Hey I am Sandeep Sharma</h1>
                 <p>A Web Developer</p>
             </div>
