--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="main">
         <nav id="navbar">
             <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#work">Work</a></li>
+                <li><a href="#welcome-section">About</a></li>
+                <li><a href="#projects">Work</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <div class="welcome-section" id="about">
-            <div>
+        <div id="welcome-section">
+            <div id="about">
                 <h1>Hey I am Sandeep Sharma</h1>
                 <p>A Web Developer</p>
             </div>
